# assignment_example_ros_pkg

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.release  README.md  workspace.repos
.github/: pull_request_template.md
.github/workflows/: ci.yaml  dependency-check.yaml  release.yaml
config/v1/: README.md
config/v2/: README.md
example_package_msgs/: CMakeLists.txt  package.xml
example_package_msgs/action/: Example.action
example_package_msgs/srv/: Example.srv
example_package_ros/: README.md  package.xml  setup.cfg  setup.py
example_package_ros/example_package_ros/: advanced_example_node.py  example_node.py
example_package_ros/launch/: advanced_example_node.launch.py  example_node.launch.py
example_package_ros/test/: test_advanced_example_node.py  test_example_node.py
